# park-o_kansai-2025_kyoto

./: pyproject.toml
.github/workflows/: document.yaml
source/: conf.py  index.md
source/_templates/: park_o_kansai_kyoto2025.docx
source/bulletin/: bulletin.md  index.md
